source/app/app_example.h

#ifndef APP_EXAMPLE_H
#define APP_EXAMPLE_H

void app_example_init(void);

int app_example_run(void);

void app_example_deinit(void);

#endif // APP_EXAMPLE_H